fix layout issue with wide laptop screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,6 @@ based on a main colour of rebeccapurple (#663399) */
 body {
   /* Set main font with backup fonts */
   font-family: "Rubik", "Molengo", sans-serif;
-  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   background-color: var(--background);
@@ -124,8 +123,8 @@ p {
 }
 /* make sure images will match the background card */
 .card img {
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 10%;
 }
@@ -207,7 +206,7 @@ footer {
 #notification {
   font-size: 3em;
 }
-@media screen and (min-width: 1296px) {
+@media screen and (min-width: 1352px) {
   .card {
     max-width: 200px;
     max-height: 200px;
